<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarTarjetaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/textWhite"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="1dp"
            android:outlineProvider="bounds">

            <ImageView
                android:id="@+id/Imgvolver"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/volver"
                android:contentDescription="@string/DescripcionImaen"/>

            <TextView
                android:id="@+id/textTile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/Ac_AgregarTarjeta"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background_fondo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/btn_scaner"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="29dp"
                            android:layout_marginLeft="29dp"
                            android:layout_marginTop="30dp"
                            android:contentDescription="@string/DescripcionImaen"
                            android:src="@drawable/chip"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="22dp"
                            android:layout_marginRight="22dp"
                            android:contentDescription="@string/DescripcionImaen"
                            android:src="@drawable/ic_mastercard"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_Tarjeta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/tv_NumeroTarjeta"
                            android:textColor="#FFF"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                        <TextView
                            android:id="@+id/tv_Titular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tv_Titular"
                            android:textColor="#FFF"
                            android:textSize="17sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv_Fecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/tv_Fecha"
                            android:textColor="#fff"
                            android:textSize="17sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/Scaner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_scanear"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/btn_Escanear"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/contenedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/NumberCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:maxLength="19"
                        android:hint="@string/edt_NumeroTarjeta"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/NameTitular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/edt_TitularTarjeta"
                        android:inputType="textPersonName"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/Mes"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/edt_MesTarjeta"
                        android:inputType="number"
                        android:maxLength="2"/>

                    <EditText
                        android:id="@+id/Year"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/edt_year"
                        android:inputType="number"
                        android:maxLength="2"/>

                    <EditText
                        android:id="@+id/CodeSecurity"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/edt_Clave"
                        android:inputType="number"
                        android:maxLength="3"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/check"
        app:backgroundTint="#4CAF50" />

</RelativeLayout>